Fix skills popover z-index

--- a/src/less/sections/skills.less
+++ b/src/less/sections/skills.less
@@ -38,6 +38,11 @@
 				display: flex;
 				flex-wrap: wrap;
 
+				&.left-container {
+					flex-direction: row-reverse;
+					justify-content: flex-end;
+				}
+
 				.skill {
 					position: relative;
 					width: 50px;
